fixed footer alignment issue using flexbox.

--- a/_sass/home/_contact.scss
+++ b/_sass/home/_contact.scss
@@ -6,18 +6,21 @@ section.ar_contact {
     background-attachment: scroll;
     background-position: center center;
     background-size: cover;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     .section-heading {
         color: goldenrod !important;
     }
-    
+
     textarea {
         height: 150px !important;
     }
-    
+
     footer {
         color: white;
-        margin-top: 6.3%;
+        height: 80px;
         background-color: rgba(black, 0.7);
     }
 }
